--- a/Lesson2/cssD/medium.css
+++ b/Lesson2/cssD/medium.css
@@ -9,35 +9,20 @@
     h1 {
         font-size: 25px;
     }
-    h2, h3, h4 {
+    h2{
         font-size: 16px;
     }
+    img{
+        width: 50%;
+    }
     section{
+        background-color:rgb(80, 91, 110);
+        border-color: rgb(80, 91, 110);
+        border-style: ridge;
+        border-width: .25em;
+        border-top-right-radius: 50px;
+        border-bottom-left-radius: 50px;
         padding: .5em;
-    }
-    .one{
-        background-color:rgb(80, 91, 110);
-        border-color: rgb(80, 91, 110);
-        border-style: ridge;
-        border-width: .25em;
-        border-top-right-radius: 50px;
-        border-bottom-left-radius: 50px;
-    }
-    .two{
-        background-color:rgb(80, 91, 110);
-        border-color: rgb(80, 91, 110);
-        border-style: ridge;
-        border-width: .25em;
-        border-top-right-radius: 50px;
-        border-bottom-left-radius: 50px;
-    }
-    .three{
-        background-color:rgb(80, 91, 110);
-        border-color: rgb(80, 91, 110);
-        border-style: ridge;
-        border-width: .25em;
-        border-top-right-radius: 50px;
-        border-bottom-left-radius: 50px;
     }
     footer{
         font-size: 14px;
