--- a/Lesson2/cssD/small.css
+++ b/Lesson2/cssD/small.css
@@ -1,3 +1,4 @@
+@media only screen and (min-width: 15em){
 body {
     font-size: 12px;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
@@ -22,11 +23,16 @@ h1 {
     font-family: 'Permanent Marker', cursive;
     font-size: 20px;
 }
-h2, h3, h4 {
+h2{
     color: black;
     font-size: 14px;
     background-color: rgb(4, 211, 211);
     border-top-right-radius: 40px;
+}
+img{
+    width: 25%;
+    float: right;
+    padding:.5em;
 }
 p{
     color: whitesmoke;
