--- a/Lesson2/cssD/full.css
+++ b/Lesson2/cssD/full.css
@@ -10,8 +10,8 @@ body{
 h1 {
     font-size: 30px;
 }
-img{
-    width: 50%;
+image{
+    width: 100%;
 }
 section{
     background-color:rgb(80, 91, 110);
