--- a/Lesson2/css2/small.css
+++ b/Lesson2/css2/small.css
@@ -30,7 +30,7 @@ h2{
     border-top-right-radius: 40px;
 }
 img{
-    width: 15%;
+    width: 25%;
     float: right;
     padding:.5em;
 }
@@ -53,4 +53,4 @@ footer{
     background-color: rgb(4, 211, 211);
     text-align: center;
     padding: .01rem;
-}
+}}
