--- a/Lesson2/css2/small.css
+++ b/Lesson2/css2/small.css
@@ -1,4 +1,3 @@
-@media only screen and (min-width: 15em){
 body {
     font-size: 12px;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
@@ -53,4 +52,4 @@ footer{
     background-color: rgb(4, 211, 211);
     text-align: center;
     padding: .01rem;
-}}
+}
