--- a/lesson3/css/main.css
+++ b/lesson3/css/main.css
@@ -1,5 +1,5 @@
 body {
-    font-size: 14px;
+    font-size: 16px;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     background-color: rgb(49, 55, 66);
 }
@@ -15,8 +15,13 @@ header{
 img{
     width: 25%;
     float: left;
+    margin-top: .25em;
     border-top-right-radius: 4em;
     border-bottom-left-radius: 4em;
+}
+.outlet{
+    color: rgb(1, 255, 35);
+    margin-left: 12em;
 }
 nav{
     background-color: black;
@@ -25,7 +30,7 @@ nav{
 nav ul{ 
     display: flex;
     list-style-type: none;
-    padding: 1em;
+    padding: .5em;
 }
 nav ul li a{
     flex: 1 1 100%;
@@ -49,6 +54,7 @@ h1 {
 h2{
     color:rgb(4, 211, 211);
     text-align: center;
+    margin-bottom: 0em;
 }
 main{
     background-color: rgb(80, 91, 110);
@@ -63,7 +69,7 @@ main{
     color: black;
 }
 footer{
-    font-size: 12px;
+    font-size: 14px;
     background-color: rgb(4, 211, 211);
     border-radius: 10px;
     text-align: center;
@@ -73,7 +79,10 @@ footer{
 p{
     text-align: center;
 }
-
+.anton{
+    font-size: 20px;
+    font-family: 'Anton', sans-serif;
+}
 /*Color*/
 section{
     display: flex;
