--- a/lesson4/css/main.css
+++ b/lesson4/css/main.css
@@ -15,18 +15,23 @@ header{
 }
 header h1{
     margin: 0 0 0 17px;
-    font-size: 16px;
 }
 h1 div{
+    font-size: 18px;
     display: flex;
     flex-direction: column;
     color: black;
     font-family: 'Anton', sans-serif;
 }
 h2 {
-    color: whitesmoke;
-    font-size: 16px;
-    margin-left: 25px;
+    text-align: center;
+    text-shadow: 1px 1px chartreuse;
+    color: black;
+    font-family: 'Anton', sans-serif;
+    font-size: 22px;
+    border-bottom: black;
+    border-bottom-style: solid;
+    border-width: .25em;
 }
 img{
     width: 15%;
@@ -79,6 +84,7 @@ main{
     padding: .5em;
 }
 p{
+    box-shadow:3px 5px rgb(4, 211, 211);
     text-align: center;
 }
 .weblink{
