--- a/lesson4/css/main.css
+++ b/lesson4/css/main.css
@@ -40,7 +40,7 @@ img{
     float: left;
     border-top-right-radius: 2em;
     border-bottom-left-radius: 2em;
-    padding: none;
+    padding: 0em;
 }
 .ham{
     color: turquoise;
@@ -69,7 +69,7 @@ nav{
 }
 a:hover{
     background-color: rgb(49, 55, 66);
-    padding: .25m;
+    padding: .25em;
 }
 .responsive li{
     display: block;
