--- a/lesson4/css/main.css
+++ b/lesson4/css/main.css
@@ -34,7 +34,7 @@ h2 {
     border-width: .25em;
 }
 img{
-    width: 15%;
+    width: 100px;
     height: auto;
     max-width: 100%;
     float: left;
