--- a/lesson5/css/medium.css
+++ b/lesson5/css/medium.css
@@ -26,6 +26,7 @@
 		font-family: "Anton", sans-serif;
 		margin: 0px;
 		background-color: black;
+		padding: .5em;
 	}
 	.day{
 		display: grid;
@@ -45,6 +46,7 @@
 	.map{
 		display: block;
 		width: 250px;
+		margin: 0em;
 		border-color: black;
 		border-style: solid;
 		border-width: 5px;
