--- a/lesson5/css/small.css
+++ b/lesson5/css/small.css
@@ -35,6 +35,7 @@ h3{
     font-family: "Anton", sans-serif;
     color: whitesmoke;
     background-color: black;
+    padding: .5em;
 }
 .gogo{
     float: left;
@@ -54,7 +55,7 @@ nav{
     margin: auto;
     margin-top: .5em;
     background-color: black;
-    border-radius: 2em;
+    border-radius: 1em;
 }
 .navigation .current2{
     
@@ -76,18 +77,19 @@ nav{
     display: block;
     text-align: center;
     text-decoration: none;
-    color: rgb(1, 255, 35);
+    color: rgb(4, 211, 211);
     font-size: 14px;
     padding: 1em;
 }
 a:hover{
-    background-color: whitesmoke;
+    background-color: rgb(80, 91, 110);
+    border-radius: 1em;
 }
 .responsive li{
     display: block;
 }
 .overlay{
-    font-size: 10px;
+    font-size: 12px;
     position: absolute;
     top: 10px;
     left: 10px;
@@ -162,13 +164,14 @@ img{
     background-color: black;
     font-size: 18px;
     text-align: center;
+    padding: .5em;
 }
 .line{
     width: 50%;
     float: right;
 }
 .article{
-    font-size: 12px;
+    font-size: 16px;
 }.map{
     display: none;
 }
