--- a/lesson6/css/large.css
+++ b/lesson6/css/large.css
@@ -1,4 +1,4 @@
-@media only screen and (min-width: 60em){
+@media only screen and (min-width: 48em){
     body{
         font-size: 20px;
     }
@@ -6,10 +6,7 @@
         font-size: 22px;
     }
     .large{
-        position: absolute;
-        top: 5px;
-        right: 10px;
-        color: whitesmoke;
+        display: block;
     }
     .small, .med{
         display: none;
