--- a/lesson6/css/small.css
+++ b/lesson6/css/small.css
@@ -1,7 +1,7 @@
 body {
     font-size: 12px;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    background-image: url("../images/prestonid.jpg");
+    background-image: url("../images/prestonid3.jpg");
     background-size: cover;
     background-repeat: no-repeat;
     background-attachment: fixed;
@@ -115,10 +115,11 @@ main{
     position: relative;
     border-top-right-radius: 50px;
 }
-.small{
+.small, .med, .large{
+    font-size: 20px;
     position: absolute;
-    top: 5px;
-    right: 10px;
+    top: 10px;
+    right: 2em;
     color: whitesmoke;
 }
 .med, .large{
