--- a/lesson6/css/small.css
+++ b/lesson6/css/small.css
@@ -112,18 +112,9 @@ main{
     padding: .5em;
 }
 .hero {
+    width: 100%;
     position: relative;
     border-top-right-radius: 50px;
-}
-.small, .med, .large{
-    font-size: 20px;
-    position: absolute;
-    top: 10px;
-    right: 2em;
-    color: whitesmoke;
-}
-.med, .large{
-    display: none;
 }
 .popup{
     position: relative;
