update overlay and font sizing

--- a/lesson6/css/medium.css
+++ b/lesson6/css/medium.css
@@ -1,10 +1,13 @@
-@media only screen and (min-width: 32.7em){
+@media only screen and (min-width: 400px){
 	body{
         font-size: 18px;
     }
     h1{
-        font-size: 20px;
-    }
+        font-size: 22px;
+	}
+	h2{
+		font-size: 22px;
+	}
     div{
         font-size: 16px;
     }
@@ -21,6 +24,9 @@
 	.navigation li:first-child {
 		display: none;
 	}
+	.overlay{
+		font-size: 12px;
+		}
 	.five{
 		display: block;
 		font-family: "Anton", sans-serif;
