--- a/lesson7/css/small.css
+++ b/lesson7/css/small.css
@@ -100,7 +100,7 @@ img[data-src] {
 
 img {
     filter: blur(0em);
-    transition: filter .5s;
+    transition: filter 1s;
 }
 .weblink{
     color: black;
