--- a/lesson8/activity8/tablecss.css
+++ b/lesson8/activity8/tablecss.css
@@ -22,6 +22,10 @@ tfoot{
 tbody{
     font-size: 12px;
 }
+tr:first-child{
+    background-color: #628ca6; 
+    color:white;
+}
 td {
     padding: .5em;
 }
