--- a/lesson8/css/large.css
+++ b/lesson8/css/large.css
@@ -5,6 +5,15 @@
     h1{
         font-size: 24px;
     }
+    form legend{
+        font-size: 20px;
+    }
+    form label.top{
+        font-size: 16px;
+    }
+    form label.sbs{
+        font-size: 16px;
+    }
     footer{
         font-size: 14px;
     }
