--- a/lesson8/css/small.css
+++ b/lesson8/css/small.css
@@ -64,6 +64,7 @@ a:hover{
 }
 
 main{
+    max-width: 36em;
     margin-bottom: 2em;
     font-size: 12px;
     background-color: rgb(49, 55, 66);
@@ -73,7 +74,62 @@ main{
     color: whitesmoke;
     padding: 1em;
 }
+/*----------Form----------*/
+form fieldset{
+    margin: 2rem 0;
+    border: 2px solid rgb(4, 211, 211);
+    border-radius: 10px;
+    padding: .5rem 2%;
+}
+form legend{
+    color: whitesmoke;
+    margin: 0 1rem;
+    font-size: 14px;
+    padding: 0 .5rem;
+}
+form label.top{
+    display: block;
+    padding-top: 1rem;
+    color: whitesmoke;
+    font-size: 12px;
+}
+form label.top input, form label.top select{
+    display: block;
+    font-size: 1rem;
+    border: 1px solid black;
+    padding: .75rem;
+    color: whitesmoke;
+    width: 100%;
+    max-width: 20rem;
+}
+form label.sbs{
+    display: block;
+    padding: .75rem 0;
+    color: whitesmoke;
+    font-size: 12px;
+}
+form input.submitBtn{
+    border: none;
+    background-color: rgb(1, 255, 35);
+    color: black;
+    border-radius: 1rem;
+    padding: .75rem 1.5rem;
+    margin: 0 0 2rem 2%;
+    width: 96%;
+    max-width: 20rem;
+}
+form label.top input:required{
+    border-left: 8px solid rgb(49, 55, 66);
+}
+form label.top input:required:valid{
+    border-left: 8px solid rgb(1, 255, 35);
+}
 .thanks{
+    text-align: center;
+    font-size: 20px;
+    padding-bottom: .5em;
+}
+.danger{
     text-align: center;
 }
 .weblink{
