--- a/lesson8/css/small.css
+++ b/lesson8/css/small.css
@@ -44,6 +44,9 @@ nav{
     list-style: none;
     padding: 0em;
 }
+.navigation li:first-child{
+    display: block;
+}
 .navigation li{
     display: none;
 }
@@ -98,7 +101,7 @@ form label.top input, form label.top select{
     font-size: 1rem;
     border: 1px solid black;
     padding: .75rem;
-    color: whitesmoke;
+    color: black;
     width: 100%;
     max-width: 20rem;
 }
@@ -123,6 +126,10 @@ form label.top input:required{
 }
 form label.top input:required:valid{
     border-left: 8px solid rgb(1, 255, 35);
+}
+textarea{
+    resize: vertical;
+    min-height: .75rem;
 }
 .thanks{
     text-align: center;
