--- a/lesson9/activity/css/prophets.css
+++ b/lesson9/activity/css/prophets.css
@@ -6,18 +6,21 @@ body {
 header, main, footer {
     margin: auto;
     max-width: 800px;
+    text-align: center;
 }
 h1{
     background-color: cornsilk;
     font-size: 20px;
     border: 5px solid  rgba(26, 142, 177, 0.938);
-    text-align: center;
 }
 h2{
     font-size: 16px;
 }
 p{
     font-size: 12px;
+}
+h1, h2, p{
+    margin: 0 auto;
 }
 .card{
     display: grid;
@@ -26,7 +29,9 @@ p{
     grid-gap: 1em;
 }
 img{
-    border: solid .75em cornsilk;
+    border: solid 5px black;
+    box-shadow: 7px 7px 8px rgb(95, 95, 95);
+    margin-top: 10px;
 }
 section {
     background-color: cornsilk;
