--- a/lesson9/home/css/large.css
+++ b/lesson9/home/css/large.css
@@ -14,7 +14,7 @@
     }
     .rodeo, .mud, .music{
         display: block;
-        max-width: 100%;
+        width: 100%;
     }
     .rodeo{
         float: right;
