--- a/lesson9/home/css/large.css
+++ b/lesson9/home/css/large.css
@@ -12,32 +12,9 @@
     .news{
         border-left: 5px solid black;
     }
-    .rodeo, .mud, .music{
+    .rodeo, .music{
         display: block;
         width: 100%;
-    }
-    .rodeo{
-        float: right;
-        position: relative;
-        margin-top: 2em;
-        margin-right: 15px;
-        z-index: 2;
-        transform: rotate(18deg);
-    }
-    .mud{
-        position: relative;
-        float: left;
-        margin-top: 2em;
-        margin-left: 1.5em;
-        z-index: 1;
-        transform: rotate(-20deg);
-    }
-    .music{
-        position: sticky;
-        float: right;
-        margin-top: -4em;
-        margin-right: 3em;
-        transform: none;
     }
     .towns{
         display: grid;
