--- a/lesson9/home/css/large.css
+++ b/lesson9/home/css/large.css
@@ -11,6 +11,7 @@
     }
     .news{
         border-left: 5px solid black;
+        border-top: none;
     }
     .rodeo, .music{
         display: block;
