--- a/lesson9/home/css/medium.css
+++ b/lesson9/home/css/medium.css
@@ -5,10 +5,6 @@
     h1{
         font-size: 22px;
 	}
-	.towns{
-        display: grid;
-        grid-template-columns: 1fr 1fr;
-    }
     div{
         font-size: 16px;
     }
@@ -21,5 +17,14 @@
 	}
 	.navigation li:first-child {
 		display: none;
-    }
+	}
+	.towns{
+		display: flex;
+		flex-direction: row;
+	}
+	.towns:nth-child(odd) {
+		flex-direction: row-reverse;
+		justify-content: space-evenly;
+		align-content: center;
+}
 }
