--- a/lesson9/home/css/medium.css
+++ b/lesson9/home/css/medium.css
@@ -19,12 +19,16 @@
 		display: none;
 	}
 	.towns{
-		display: flex;
-		flex-direction: row;
-	}
-	.towns:nth-child(odd) {
-		flex-direction: row-reverse;
-		justify-content: space-evenly;
-		align-content: center;
-}
+		display: grid;
+		  grid-template-columns: 1fr 1fr;
+	  }
+	  
+	  .section:nth-child(odd) .img{
+		  grid-column: 2;
+	  }
+	  
+	  .div:nth-child(odd){
+		  grid-column: 1;
+		  grid-row: 1;
+	  }
 }
