--- a/lesson9/home/css/small.css
+++ b/lesson9/home/css/small.css
@@ -1,7 +1,10 @@
 body {
     font-size: 12px;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    background-color: rgb(49, 55, 66);
+    background-image: url("../images/prestonid3.jpg");
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
 }
 header, main, footer {
     max-width: 1000px;
