--- a/lesson10/css/small.css
+++ b/lesson10/css/small.css
@@ -1,10 +1,7 @@
 body {
     font-size: 12px;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    background-image: url("../images/prestonid3.jpg");
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-attachment: fixed;
+    background-color: rgb(49, 55, 66);
 }
 header, main, footer {
     max-width: 750px;
