--- a/lesson11/lesson10/css/small.css
+++ b/lesson11/lesson10/css/small.css
@@ -156,6 +156,7 @@ img{
     max-width: 50%;
     margin: auto;
     border: 5px solid black;
+    padding: 0;
 }
 .local-events li{
     background-color: rgb(4, 211, 211);
