--- a/lesson11/fishhaven/css/small.css
+++ b/lesson11/fishhaven/css/small.css
@@ -4,7 +4,7 @@ body {
     background-color: rgb(49, 55, 66);
 }
 header, main, footer {
-    max-width: 750px;
+    max-width: 1000px;
     margin: auto;
 }
 header{
@@ -32,6 +32,7 @@ h2 {
     font-size: 18px;
 }
 h3{
+    font-size: 18px;
     font-family: "Anton", sans-serif;
     text-align: center;
     color: whitesmoke;
@@ -151,18 +152,22 @@ img{
     position: relative;
     margin: auto;
 }
-.art{
-    font-family: "Anton", sans-serif;
-    background-color: black;
-    font-size: 24px;
-    text-align: center;
+.local-events{
+    background-image: url("../images/festive.jpg");
+    background-size: 100%;
+    margin-top: 1.2em;
+    padding-bottom: .5em;
+}
+.local-events li{
+    list-style: none;
     padding: .5em;
 }
-.firstline{
-    width: 50%;
-    display: block;
-    margin-right: auto;
-    margin-left: auto;
+section{
+    padding: 1em;
+}
+.fair{
+    width: 40%;
+    float: right;
 }
 .article{
     text-align: left;
@@ -180,7 +185,7 @@ img{
     color: black;
 }
 footer{
-    font-size: 12px;
+    font-size: 14px;
     background-color: rgb(4, 211, 211);
     border-radius: 10px;
     text-align: center;
