--- a/lesson11/sodasprings/css/small.css
+++ b/lesson11/sodasprings/css/small.css
@@ -4,7 +4,7 @@ body {
     background-color: rgb(49, 55, 66);
 }
 header, main, footer {
-    max-width: 750px;
+    max-width: 1000px;
     margin: auto;
 }
 header{
@@ -26,9 +26,9 @@ h2 {
     margin-top: -1.25em;
     margin-right: 1em;
     text-align: right;
-    text-shadow: 3px 3px black;
-    color: whitesmoke;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    text-shadow: 3px 3px whitesmoke;
+    color: black;
+    font-family: "Anton", sans-serif;
     font-size: 18px;
 }
 h3{
@@ -148,21 +148,24 @@ p{
 }
 img{
     width: 30px;
-    position: relative;
-    margin: auto;
 }
-.art{
-    font-family: "Anton", sans-serif;
-    background-color: black;
-    font-size: 24px;
-    text-align: center;
+.local-events{
+    background-image: url("../images/festive.jpg");
+    background-size: 100%;
+    margin-top: 1.2em;
+    padding-bottom: .5em;
+}
+.local-events li{
+    list-style: none;
     padding: .5em;
 }
-.firstline{
+.music{
     width: 50%;
-    display: block;
-    margin-right: auto;
-    margin-left: auto;
+    float: right;
+    box-shadow: 7px 7px 10px black;
+}
+section{
+    padding: 1em;
 }
 .article{
     text-align: left;
@@ -180,7 +183,7 @@ img{
     color: black;
 }
 footer{
-    font-size: 12px;
+    font-size: 14px;
     background-color: rgb(4, 211, 211);
     border-radius: 10px;
     text-align: center;
