--- a/lesson12/css/small.css
+++ b/lesson12/css/small.css
@@ -5,6 +5,7 @@ body {
     color: whitesmoke;
 }
 
+
 header,
 main,
 footer {
@@ -112,7 +113,6 @@ h2 {
 p {
     font-size: .5em;
     font-weight: 700;
-    padding-left: 1em;
 }
 
 .five{
@@ -200,13 +200,6 @@ h3 {
     justify-content: center;
     align-content: center;
     text-align: center;
-    padding-left: 2em;
-    padding-right: 2em;
-}
-
-.port, .ferry{
-    max-width: 100%;
-    padding-bottom: 1em;
 }
 
 footer {
@@ -340,4 +333,10 @@ textarea{
 }
 .thanks p{
     font-size: 1.25em;
+}
+
+/*contact*/
+iframe{
+    max-width: 100%;
+    padding-top: 1em;
 }
