--- a/lesson12/css/small.css
+++ b/lesson12/css/small.css
@@ -1,10 +1,9 @@
 body {
     font-family: 'Barlow Semi Condensed', sans-serif;
     font-size: 1.5em;
-    background-color: #004a72;
+    background-image: linear-gradient(#7CEDE4, #0fd6d0, #0595B1, #004786);
     color: whitesmoke;
 }
-
 
 header,
 main,
@@ -62,7 +61,12 @@ nav {
 }
 
 .responsive li {
-    display: block;;
+    display: block;
+    ;
+}
+
+main {
+    background-color: #004a72;
 }
 
 h1 {
@@ -115,8 +119,17 @@ p {
     font-weight: 700;
 }
 
-.five{
+.five {
     display: none;
+}
+
+.weather{
+    text-align: left;
+    margin-left: 1em;
+    padding: .15em;
+    border-bottom: none;
+    color: #ebb564;
+    font-weight: normal;
 }
 
 h3 {
@@ -127,7 +140,7 @@ h3 {
     font-size: .8em;
 }
 
-.rent{
+.rent {
     display: none;
 }
 
@@ -156,13 +169,13 @@ h3 {
     width: auto;
 }
 
-.text{
+.text {
     color: black;
     font-weight: 800;
     font-size: 10px;
 }
 
-.media{
+.media {
     text-align: center;
     font-weight: 700;
     font-size: .5em;
@@ -195,7 +208,7 @@ h3 {
     color: white;
 }
 
-.contact{
+.contact {
     display: flex;
     justify-content: center;
     align-content: center;
@@ -217,7 +230,7 @@ footer {
 }
 
 /*form*/
-img.wave{
+img.wave {
     display: block;
     max-width: 100%;
     margin-left: auto;
@@ -225,12 +238,14 @@ img.wave{
     border-top-right-radius: 4em;
     border-bottom-left-radius: 4em;
 }
-.title{
+
+.title {
     position: relative;
     margin-top: -1.5em;
+    color: #d8706a;
 }
 
-.con{
+.con {
     margin: auto;
     text-align: center;
     font-family: 'Staatliches', cursive;
@@ -240,20 +255,20 @@ img.wave{
     border: none;
 }
 
-.terms{
+.terms {
     position: relative;
     border: 3px whitesmoke solid;
     padding: 1em;
 }
 
-form fieldset{
+form fieldset {
     max-width: 30em;
     margin: auto;
-    border: 2px solid ;
+    border: 2px solid;
     border-radius: 10px;
 }
 
-form legend{
+form legend {
     color: whitesmoke;
     margin: 0 1rem;
     font-size: 1em;
@@ -261,10 +276,11 @@ form legend{
     text-align: center;
 }
 
-form.top{
+form.top {
     padding-bottom: 2em;
 }
-form label.top{
+
+form label.top {
     display: block;
     padding: .75em;
     color: whitesmoke;
@@ -272,7 +288,8 @@ form label.top{
     text-align: center;
 }
 
-form label.top input, form label.top select{
+form label.top input,
+form label.top select {
     display: block;
     font-size: 1rem;
     padding: .75rem;
@@ -281,7 +298,8 @@ form label.top input, form label.top select{
     max-width: 20rem;
     margin: auto;
 }
-form label.sbs{
+
+form label.sbs {
     display: block;
     padding: .75em;
     color: whitesmoke;
@@ -289,7 +307,7 @@ form label.sbs{
     text-align: center;
 }
 
-form input.submitBtn{
+form input.submitBtn {
     border: none;
     background-color: #45cfd9;
     color: black;
@@ -300,43 +318,79 @@ form input.submitBtn{
     padding: .5em;
 }
 
-form label.top input:required{
-    border-left: 8px solid ;
+form label.top input:required {
+    border-left: 8px solid;
 }
 
-form label.top input:required:valid{
-    border-left: 8px solid ;
+form label.top input:required:valid {
+    border-left: 8px solid;
 }
 
-textarea{
+textarea {
     resize: vertical;
     min-width: auto;
     min-height: .5rem;
 }
 
-.thanks{
+.thanks {
     text-align: center;
     font-size: 20px;
     padding-bottom: .5em;
 }
 
 /*thank you*/
-.thanks{
+.thanks {
     text-align: center;
     padding: 1em;
 }
-.thanks img{
+
+.thanks img {
     margin: auto;
     border-top-right-radius: 5em;
     border-bottom-left-radius: 5em;
-    position: relative;;
+    position: relative;
+    ;
 }
-.thanks p{
+
+.thanks p {
     font-size: 1.25em;
 }
 
 /*contact*/
-iframe{
+iframe {
     max-width: 100%;
     padding-top: 1em;
+}
+
+.qa {
+    line-height: 1.5;
+}
+
+/*tours*/
+
+.tour {
+    text-align: center;
+    padding: 1em;
+}
+
+.visit {
+    color: #ff7770;
+    font-weight: normal;
+}
+
+.info {
+    color: black;
+    font-size: .5em;
+    background-color: #45cfd9;
+    border-bottom-left-radius: 4em;
+    border-top-right-radius: 4em;
+    padding: 1em;
+}
+
+.info a {
+    color: black;
+    background: linear-gradient(#ffd57c, #ff7770);
+    border-top-right-radius: 2em;
+    border-bottom-left-radius: 2em;
+    padding: .5em;
 }
