--- a/lesson12/css/large.css
+++ b/lesson12/css/large.css
@@ -29,7 +29,7 @@
     }
 
     .text {
-        font-size: 20px;
+        font-size: 1.25em;
     }
 
     .media {
@@ -38,12 +38,12 @@
     }
 
     .fa {
-        padding: 10px;
-        font-size: 20px;
-        width: 20px;
+        padding: .625em;
+        font-size: 1.25em;
+        width: 1.25em;
     }
 
     footer {
-        font-size: 20px;
+        font-size: 1.25em;
     }
 }
