--- a/Lesson2/css2/full.css
+++ b/Lesson2/css2/full.css
@@ -1,4 +1,4 @@
-@media only screen and (min-width: 50em){
+@media only screen and (max-width: 1200em) and (min-width: 50em){
 main{
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
