--- a/lesson12/css/small.css
+++ b/lesson12/css/small.css
@@ -217,7 +217,7 @@ h3 {
 }
 
 footer {
-    font-size: 1em;
+    font-size: .5em;
     color: black;
     background-color: #ffc670;
     text-align: center;
