--- a/css/main.css
+++ b/css/main.css
@@ -32,7 +32,7 @@ ul {
     text-indent: 20px;
     color: whitesmoke;
     background-color: rgb(80, 91, 110);
-    padding: .25rem;
+    padding: 1em 0 0;
 }
 li{
     padding-bottom: .5rem;
